# glfw-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  main.cpp  run.sh  shader.h
shaders/: f.frag  frag.glsl  vert.glsl
